--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,13 @@ name = "pypi"
 [packages]
 django = "*"
 psycopg2-binary = "*"
+django-extensions = "*"
+ipython = "*"
+djangorestframework = "*"
 
 [dev-packages]
+autopep8 = "*"
+pylint = "*"
 
 [requires]
 python_version = "3.9"
