--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,11 @@ psycopg2-binary = "*"
 django-extensions = "*"
 ipython = "*"
 djangorestframework = "*"
+dj-database-url = "*"
+gunicorn = "*"
+djoser = "*"
+django-cors-headers = "*"
+whitenoise = "*"
 
 [dev-packages]
 autopep8 = "*"
