--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ djoser = "*"
 django-cors-headers = "*"
 whitenoise = "*"
 pillow = "*"
+boto3 = "*"
+django-storages = "*"
 
 [dev-packages]
 autopep8 = "*"
